// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`object fields additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_foo-key"
                  >
                    <span
                      className="label-text"
                    >
                      foo Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <label
                    className="label"
                    htmlFor="root_foo"
                  >
                    <span
                      className="label-text font-medium"
                    >
                      foo
                    </span>
                  </label>
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_foo"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        foo
                      </span>
                    </label>
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_foo__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_a"
                >
                  <span
                    className="label-text font-medium"
                  >
                    A
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_a"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      A
                    </span>
                  </label>
                  <input
                    aria-describedby="root_a__error root_a__description root_a__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_a"
                    name="root_a"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-number"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-number"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_b"
                >
                  <span
                    className="label-text font-medium"
                  >
                    B
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_b"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      B
                    </span>
                  </label>
                  <input
                    aria-describedby="root_b__error root_b__description root_b__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_b"
                    name="root_b"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    step="any"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_additionalProperty-key"
                  >
                    <span
                      className="label-text"
                    >
                      additionalProperty Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <label
                    className="label"
                    htmlFor="root_additionalProperty"
                  >
                    <span
                      className="label-text font-medium"
                    >
                      additionalProperty
                    </span>
                  </label>
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_additionalProperty"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        additionalProperty
                      </span>
                    </label>
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_additionalProperty__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            Test field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a test description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_foo-key"
                  >
                    <span
                      className="label-text"
                    >
                      foo Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <label
                    className="label"
                    htmlFor="root_foo"
                  >
                    <span
                      className="label-text font-medium"
                    >
                      foo
                    </span>
                  </label>
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_foo"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        foo
                      </span>
                    </label>
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_foo__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from both additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            My Field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a fancier description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_foo-key"
                  >
                    <span
                      className="label-text"
                    >
                      foo Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <label
                    className="label"
                    htmlFor="root_foo"
                  >
                    <span
                      className="label-text font-medium"
                    >
                      foo
                    </span>
                  </label>
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_foo"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        foo
                      </span>
                    </label>
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_foo__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from both object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            My Field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a fancier description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_a"
                >
                  <span
                    className="label-text font-medium"
                  >
                    My Item A
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_a"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      My Item A
                    </span>
                  </label>
                  <input
                    aria-describedby="root_a__error root_a__description root_a__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_a"
                    name="root_a"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-number"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-number"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_b"
                >
                  <span
                    className="label-text font-medium"
                  >
                    My Item B
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_b"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      My Item B
                    </span>
                  </label>
                  <input
                    aria-describedby="root_b__error root_b__description root_b__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_b"
                    name="root_b"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    step="any"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            My Field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a fancier description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_foo-key"
                  >
                    <span
                      className="label-text"
                    >
                      foo Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <label
                    className="label"
                    htmlFor="root_foo"
                  >
                    <span
                      className="label-text font-medium"
                    >
                      foo
                    </span>
                  </label>
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_foo"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        foo
                      </span>
                    </label>
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_foo__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            My Field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a fancier description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_a"
                >
                  <span
                    className="label-text font-medium"
                  >
                    My Item A
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_a"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      My Item A
                    </span>
                  </label>
                  <input
                    aria-describedby="root_a__error root_a__description root_a__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_a"
                    name="root_a"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-number"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-number"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_b"
                >
                  <span
                    className="label-text font-medium"
                  >
                    My Item B
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_b"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      My Item B
                    </span>
                  </label>
                  <input
                    aria-describedby="root_b__error root_b__description root_b__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_b"
                    name="root_b"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    step="any"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description from uiSchema show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            My Field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a fancier description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_additionalProperty-key"
                  >
                    <span
                      className="label-text"
                    >
                      additionalProperty Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <label
                    className="label"
                    htmlFor="root_additionalProperty"
                  >
                    <span
                      className="label-text font-medium"
                    >
                      additionalProperty
                    </span>
                  </label>
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_additionalProperty"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        additionalProperty
                      </span>
                    </label>
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_additionalProperty__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            Test field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a test description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_a"
                >
                  <span
                    className="label-text font-medium"
                  >
                    A
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_a"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      A
                    </span>
                  </label>
                  <input
                    aria-describedby="root_a__error root_a__description root_a__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_a"
                    name="root_a"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-number"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-number"
                disabled={false}
              >
                <label
                  className="label"
                  htmlFor="root_b"
                >
                  <span
                    className="label-text font-medium"
                  >
                    B
                  </span>
                </label>
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_b"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      B
                    </span>
                  </label>
                  <input
                    aria-describedby="root_b__error root_b__description root_b__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_b"
                    name="root_b"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    step="any"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="title-field mb-6"
          id="root__title"
        >
          <h2
            className="text-3xl font-bold text-primary mb-2"
          >
            Test field
          </h2>
          <div
            className="divider divider-primary"
          />
        </div>
        <div
          className="description-field my-4"
          id="root__description"
        >
          <div
            className="text-sm text-base-content/80"
          >
            a test description
          </div>
        </div>
        <div
          className="grid grid-cols-1 gap-3 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_additionalProperty-key"
                  >
                    <span
                      className="label-text"
                    >
                      additionalProperty Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <label
                    className="label"
                    htmlFor="root_additionalProperty"
                  >
                    <span
                      className="label-text font-medium"
                    >
                      additionalProperty
                    </span>
                  </label>
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_additionalProperty"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        additionalProperty
                      </span>
                    </label>
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_additionalProperty__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description with global label off additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_foo-key"
                  >
                    <span
                      className="label-text"
                    >
                      foo Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="foo"
                    disabled={false}
                    id="root_foo-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_foo"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        foo
                      </span>
                    </label>
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_foo__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description with global label off object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-string"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-string"
                disabled={false}
              >
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_a"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      A
                    </span>
                  </label>
                  <input
                    aria-describedby="root_a__error root_a__description root_a__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_a"
                    name="root_a"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <div
              className="rjsf-field rjsf-field-number"
            >
              <div
                className="field-template mb-3 rjsf-field rjsf-field-number"
                disabled={false}
              >
                <div
                  className="form-control"
                >
                  <label
                    className="label hidden"
                    htmlFor="root_b"
                    style={
                      {
                        "display": "none",
                      }
                    }
                  >
                    <span
                      className="label-text"
                    >
                      B
                    </span>
                  </label>
                  <input
                    aria-describedby="root_b__error root_b__description root_b__help"
                    autoFocus={false}
                    className="input input-bordered"
                    disabled={false}
                    id="root_b"
                    name="root_b"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    required={false}
                    step="any"
                    type="number"
                    value=""
                  />
                </div>
                <div
                  className="rjsf-field-error-template text-red-600"
                >
                  <ul
                    className="list-disc list-inside"
                  />
                </div>
                <div
                  className="rjsf-field-help-template text-gray-500 text-sm"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`object fields with title and description with global label off show add button and fields if additionalProperties is true and not an object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="rjsf-field rjsf-field-object"
  >
    <div
      className="field-template mb-3 rjsf-field rjsf-field-object"
      disabled={false}
    >
      <div
        className="form-control bg-base-100 p-6 rounded-xl shadow-lg"
      >
        <div
          className="grid grid-cols-1 gap-4 "
        >
          <div
            className=""
          >
            <div
              className="wrap-if-additional-template rjsf-field rjsf-field-string"
            >
              <div
                className="flex items-baseline"
                style={
                  {
                    "justifyContent": "space-between",
                  }
                }
              >
                <div>
                  <label
                    className="label"
                    htmlFor="root_additionalProperty-key"
                  >
                    <span
                      className="label-text"
                    >
                      additionalProperty Key
                    </span>
                  </label>
                  <input
                    className="input input-bordered"
                    defaultValue="additionalProperty"
                    disabled={false}
                    id="root_additionalProperty-key"
                    onBlur={[Function]}
                    type="text"
                  />
                </div>
                <div
                  className="field-template mb-3 rjsf-field rjsf-field-string"
                  disabled={false}
                >
                  <div
                    className="form-control"
                  >
                    <label
                      className="label hidden"
                      htmlFor="root_additionalProperty"
                      style={
                        {
                          "display": "none",
                        }
                      }
                    >
                      <span
                        className="label-text"
                      >
                        additionalProperty
                      </span>
                    </label>
                    <input
                      aria-describedby="root_additionalProperty__error root_additionalProperty__description root_additionalProperty__help"
                      autoFocus={false}
                      className="input input-bordered"
                      disabled={false}
                      id="root_additionalProperty"
                      name="root_additionalProperty"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      required={false}
                      type="text"
                      value="should appear"
                    />
                  </div>
                  <div
                    className="rjsf-field-error-template text-red-600"
                  >
                    <ul
                      className="list-disc list-inside"
                    />
                  </div>
                  <div
                    className="rjsf-field-help-template text-gray-500 text-sm"
                  >
                    <div />
                  </div>
                </div>
                <div
                  className="flex self-center"
                >
                  <button
                    aria-label="Remove"
                    className="rjsf-object-property-remove"
                    disabled={false}
                    id="root_additionalProperty__remove"
                    onClick={[Function]}
                    title="Remove"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-trash h-5 w-5"
                      data-icon="trash"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="flex justify-end"
          >
            <div
              className="row"
            >
              <p
                className="col-xs-3 col-xs-offset-9 text-right rjsf-object-property-expand btn btn-primary btn-sm"
              >
                <button
                  aria-label="Add"
                  className="btn-add col-xs-12 btn-primary btn-primary-content"
                  disabled={false}
                  id="root__add"
                  onClick={[Function]}
                  title="Add"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-plus h-5 w-5"
                    data-icon="plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rjsf-field-error-template text-red-600"
      >
        <ul
          className="list-disc list-inside"
        />
      </div>
      <div
        className="rjsf-field-help-template text-gray-500 text-sm"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary btn-primary-content "
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
